Implement User CRUD API with service, repository, and integration tests