@@ -1,12 +1,15 @@
 package com.m01project.taskmanager.controller;
 
+import com.m01project.taskmanager.dto.UserRequestDto;
 import com.m01project.taskmanager.dto.UserResponseDto;
 import com.m01project.taskmanager.model.User;
 import com.m01project.taskmanager.service.UserService;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.net.URI;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/users")
@@ -19,36 +22,53 @@ public class UserController {
     }
 
     @PostMapping
-    public ResponseEntity<UserResponseDto> createUser(@RequestBody User user) {
+    public ResponseEntity<UserResponseDto> createUser(@RequestBody UserRequestDto req) {
+        User user = toEntity(req);
         User created = userService.create(user);
-        return ResponseEntity.status(201).body(new UserResponseDto(created.getId(), created.getEmail()));
+        UserResponseDto body = toResponse(created);
+        URI location = URI.create("/api/users/" + body.id());
+        return ResponseEntity.created(location).body(body);
     }
 
     @GetMapping("/{id}")
     public ResponseEntity<UserResponseDto> getUser(@PathVariable Long id) {
         return userService.getById(id)
-                .map(u -> new UserResponseDto(u.getId(), u.getEmail()))
+                .map(this::toResponse)
                 .map(ResponseEntity::ok)
                 .orElseGet(() -> ResponseEntity.notFound().build());
     }
 
     @GetMapping
-    public List<UserResponseDto> getAllUsers() {
-        return userService.getAll()
+    public ResponseEntity<List<UserResponseDto>> getAllUsers() {
+        List<UserResponseDto> dtoList = userService.getAll()
                 .stream()
-                .map(u -> new UserResponseDto(u.getId(), u.getEmail()))
-                .toList();
+                .map(this::toResponse)
+                .collect(Collectors.toList());
+        return ResponseEntity.ok(dtoList);
     }
 
     @PutMapping("/{id}")
-    public ResponseEntity<UserResponseDto> updateUser(@PathVariable Long id, @RequestBody User user) {
+    public ResponseEntity<UserResponseDto> updateUser(@PathVariable Long id,
+                                                      @RequestBody UserRequestDto req) {
+        User user = toEntity(req);
         User updated = userService.update(id, user);
-        return ResponseEntity.ok(new UserResponseDto(updated.getId(), updated.getEmail()));
+        return ResponseEntity.ok(toResponse(updated));
     }
 
     @DeleteMapping("/{id}")
     public ResponseEntity<Void> deleteUser(@PathVariable Long id) {
         userService.delete(id);
         return ResponseEntity.noContent().build();
+    }
+
+    // --- helpers ---
+    private User toEntity(UserRequestDto dto) {
+        User u = new User();
+        u.setEmail(dto.email());
+        return u;
+    }
+
+    private UserResponseDto toResponse(User u) {
+        return new UserResponseDto(u.getId(), u.getEmail());
     }
 }
